[project]
name = "llm-matched-responses"
version = "0.0.2"
description = "An llm plugin that provides a matched-responses model for testing - returns configurable responses based on input patterns"
requires-python = ">=3.11"
dependencies = [
    "llm>=0.22",
]

[project.entry-points.llm]
matched_responses = "llm_matched_responses"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
