[project]
name = "llm-matched-responses"
version = "0.0.3"
description = "An llm plugin that provides a matched-responses model for testing - returns configurable responses based on input patterns"
readme = "README.md"
authors = [{name = "Josh Albrecht"}]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "llm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/imbue-ai/llm-matched-responses"

[project.entry-points.llm]
matched_responses = "llm_matched_responses"

[tool.setuptools]
py-modules = ["llm_matched_responses"]

[project.optional-dependencies]
test = ["pytest"]
